<resources>
    <string name="app_name">WebBrowserApp</string>
    <string name="edit_text_hint">Please enter a URL...</string>
    <string name="edit_text">editText</string>
    <string name="back_button">Back button</string>
    <string name="go_button">Go button</string>
    <string name="next_button">Next button</string>
    <string name="addbookmark_button">Add Bookmark button</string>
    <string name="save_button">Save Bookmark button</string>
    <string name="bookmark_button">Show Bookmarks button</string>
    <string name="button">Close button</string>
    <string name="close_button">Close</string>
    <string name="text">Text</string>
    <string name="image_view">Image view</string>
    <string name="share_button">Share button</string>
    <string name="text_data">text/data</string>
    <string name="http">http</string>
    <string name="https">https</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>