<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".PageControlFragment">

    <EditText
        android:id="@+id/editText"
        android:layout_width="169dp"
        android:layout_height="51dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="663dp"
        android:autofillHints="@string/edit_text_hint"
        android:ems="10"
        android:hint="@string/edit_text_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="678dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintStart_toEndOf="@+id/goButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/goButton"
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="678dp"
        android:contentDescription="@string/go_button"
        android:src="@drawable/go_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="678dp"
        android:contentDescription="@string/next_button"
        android:src="@drawable/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>